# task_manager_test

./: .gitignore  README.md  run_local.bat  run_local.sh  task_instruction.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  container.py  main.py  schemas.py
backend/app/api/: __init__.py  deps.py  routes.py
backend/app/core/: database.py  settings.py
backend/app/services/: __init__.py  config_service.py  experiment_service.py  job_service.py  log_service.py  output_service.py  scheduler_service.py  ssh_service.py  sync_service.py
backend/data/runtime-config/: config.json
backend/exp_queue_manager_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_config_service.py  test_database.py  test_job_service.py  test_log_service.py  test_output_service.py  test_scheduler_service.py  test_sync_service.py
experiments/exp001_smoke_test/: notes.txt  prepare.sh  run_smoke.sbatch
experiments/exp002_multi_script_with_long_name_for_wrapping_checks/: README.md  prepare_env.sh  run_fast_check.sbatch  run_long_named_variant_for_ui_wrapping.sbatch
experiments/exp003_shell_only_preview_case/: README.md  prepare_only.sh
experiments/exp004_nested_output_collection_case/: README.md  run_nested_outputs.sbatch
experiments/exp005_cancel_me_after_submit/: README.md  run_cancel_demo.sbatch
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: EvalVisualizationPanel.tsx  JobTable.tsx  LogViewer.tsx  OperationConsole.tsx  OutputTreeView.tsx  (+2 more)
(+8 files in other folders)
